--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignmennt-1</title>
     <link rel="stylesheet" href="banner.css">
 </head>
 
@@ -15,9 +15,11 @@
             <div class="photo">
                 <img src="icon/Group.png" alt="Developer Img">
             </div>
-            <div class="text-1">
-                <h1>"In the near future, I hope to become a Developer."</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            <div>
+                <h1 class="text-1">"In the near future, I hope to become a Developer."</h1>
+                <p class="para-1 text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum
+                    has been the
                     industry's standard dummy text.</p>
             </div>
             <div>
@@ -26,7 +28,25 @@
         </div>
 
     </header>
+    <!-- Why Web Development Part -->
     <main>
+        <section class="drum-1">
+            <div class="main-container">
+                <div class="child-1">
+                    <h2 class="text-dark">Why Web Development??</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text.</p>
+
+                </div>
+                <div class="child-2">
+
+                </div>
+
+
+            </div>
+
+
+        </section>
 
     </main>
     <footer>
