my current terget

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     </header>
     <!-- Why Web Development Part -->
     <main>
-        <section class="drum-1">
-            <div class="main-container">
+        <section class="container-1">
+            <div>
                 <div class="child-1">
                     <h2 class="text-dark">Why Web Development??</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                    <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem
+                        Ipsum has been
                         the industry's standard dummy text.</p>
 
                 </div>
@@ -46,6 +48,72 @@
             </div>
 
 
+        </section>
+        <!-- /* My Inspiration */ -->
+        <section class="container-2">
+            <div class="my-child-1">
+                <h2>My Inspiration</h2>
+                <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the
+                    industry's standard dummy text.</p>
+            </div>
+            <div class="my-child-2">
+
+                <iframe width="1070" height="550" src="https://www.youtube.com/embed/JEAYNvLs5nQ?si=B21MCqZuGM-PhH44"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            </div>
+
+        </section>
+        <!-- My Current terget -->
+        <section class="container-3">
+            <div class="current-target">
+
+                <div class="target-text-description">
+                    <h2>My Current Target</h2>
+                    <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem
+                        Ipsum has been the
+                        industry's standard dummy text.</p>
+
+                </div>
+                <!-- HTML CSS JS PART  -->
+                <div class="terget-item-description">
+                    <div class="item-1 item-body">
+                        <img src="icon/html.png" alt="">
+                        <h3>HTML</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href=""><B>learn more</B></a>
+                    </div>
+
+                    <!-- CSS -->
+
+                    <div class=" cs-bg item-1 item-body">
+                        <img src="icon/css.png" alt="">
+                        <h3>CSS</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href=""><B>learn more</B></a>
+                    </div>
+
+                    <!-- JS -->
+
+                    <div class=" js-bg item-1 item-body">
+                        <img src="icon/js.png" alt="">
+                        <h3>JAVASCRIPT</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href=""><B>learn more</B></a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="next-target">
+                <div class="text-description">
+
+                </div>
+
+            </div>
         </section>
 
     </main>
