--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
             </div>
-
         </section>
         <!-- My Current terget -->
         <section class="container-3">
@@ -77,28 +75,23 @@
                         Lorem
                         Ipsum has been the
                         industry's standard dummy text.</p>
-
                 </div>
                 <!-- HTML CSS JS PART  -->
-                <div class="terget-item-description">
+                <div class="target-item-description">
                     <div class="item-1 item-body">
                         <img src="icon/html.png" alt="">
                         <h3>HTML</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing.</p>
                         <a href=""><B>learn more</B></a>
                     </div>
-
                     <!-- CSS -->
-
                     <div class=" cs-bg item-1 item-body">
                         <img src="icon/css.png" alt="">
                         <h3>CSS</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing.</p>
                         <a href=""><B>learn more</B></a>
                     </div>
-
                     <!-- JS -->
-
                     <div class=" js-bg item-1 item-body">
                         <img src="icon/js.png" alt="">
                         <h3>JAVASCRIPT</h3>
@@ -108,16 +101,65 @@
                 </div>
 
             </div>
+            <!-- My Next terget -->
             <div class="next-target">
-                <div class="text-description">
-
+                <div class="next-text-description">
+                    <h2>My Next Target</h2>
+                    <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem
+                        Ipsum has been the
+                        industry's standard dummy text.</p>
                 </div>
-
+                <!-- REACT JS PART -->
+                <div class="next-item-container">
+                    <div class="next-item-parent">
+                        <div>
+                            <img src="icon/react.png.png" alt="">
+                        </div>
+                        <div class="next-item-mg">
+                            <h3>React JS</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text.</p>
+                            <a href="">learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- NODEJS PART -->
+                <div class="next-item-container">
+                    <div class="next-item-parent">
+                        <div>
+                            <img src="icon/nodejs.png" alt="">
+                        </div>
+                        <div class="next-item-mg">
+                            <h3>Node Js</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text.</p>
+                            <a href="">learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- MONGO DB PART -->
+                <div class="next-item-container">
+                    <div class="next-item-parent">
+                        <div>
+                            <img src="icon/mongodb.png" alt="">
+                        </div>
+                        <div class="next-item-mg">
+                            <h3>Mongo DB</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has
+                                been the industry's standard dummy text.</p>
+                            <a href="">learn More</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-
     </main>
     <footer>
+        <div class="footer-bg"></div>
 
     </footer>
 
