--- a/index.html
+++ b/index.html
@@ -159,7 +159,23 @@
         </section>
     </main>
     <footer>
-        <div class="footer-bg"></div>
+        <div class="footer-bg">
+            <div class="footer-text">
+                <h1>I need Support</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="footer-end">
+            <div>
+                <h3>An Open Commitment by MD FERDOUS ALAM</h3>
+            </div>
+            <div class="end-icon-parant">
+                <img src="icon/facebook.png" alt="">
+                <img src="icon/github.png" alt="">
+                <img src="icon/linkedin-icon 1.png" alt="">
+
+            </div>
+        </div>
 
     </footer>
 
