--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="top-text">
+        <h3>FERDOUS.A</h3>
+        <button>Download Resume</button>
+    </div>
     <!-- Banner Part -->
     <header>
         <div class="banner-container">
@@ -23,7 +27,9 @@
                     industry's standard dummy text.</p>
             </div>
             <div>
-                <button class="btn">Contact with me</button>
+                <button class="btn">
+                    <a href="#contact">Contact with me</a>
+                </button>
             </div>
         </div>
 
@@ -32,7 +38,7 @@
     <main>
         <section class="container-1">
             <div>
-                <div class="child-1">
+                <div class="web-text-1">
                     <h2 class="text-dark">Why Web Development??</h2>
                     <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem
@@ -40,10 +46,41 @@
                         the industry's standard dummy text.</p>
 
                 </div>
-                <div class="child-2">
+                <div class="web-text-2">
+                    <div class="web-content-box">
+                        <div>
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
 
+                        <img src="icon/Layer_1.png" alt="">
+                    </div>
                 </div>
 
+                <div class="web-text-2">
+                    <div class="web-content-box">
+                        <div>
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+
+                        <img src="icon/Layer_1.png" alt="">
+                    </div>
+                </div>
+
+                <div class="web-text-2">
+                    <div class="web-content-box">
+                        <div>
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+
+                        <img src="icon/Layer_1.png" alt="">
+                    </div>
+                </div>
 
             </div>
 
@@ -164,8 +201,18 @@
                 <h1>I need Support</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             </div>
+            <div class="text-input">
+                <div>
+                    <input type="text" placeholder="Suggest me any feedback for me">
+                </div>
+
+                <div>
+                    <button>Submit</button>
+                </div>
+
+            </div>
         </div>
-        <div class="footer-end">
+        <div id="contact" class="footer-end">
             <div>
                 <h3>An Open Commitment by MD FERDOUS ALAM</h3>
             </div>
