--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         the industry's standard dummy text.</p>
 
                 </div>
-                <div class="web-text-2">
+                <div class="web-text-2 text-dark">
                     <div class="web-content-box">
                         <div>
                             <h2>I will Do Coding and Change The World</h2>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
 
-                <div class="web-text-2">
+                <div class="web-text-2 text-dark">
                     <div class="web-content-box">
                         <div>
                             <h2>I will Do Coding and Change The World</h2>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <div class="web-text-2">
+                <div class="web-text-2 text-dark">
                     <div class="web-content-box">
                         <div>
                             <h2>I will Do Coding and Change The World</h2>
@@ -158,7 +158,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                                 has
                                 been the industry's standard dummy text.</p>
-                            <a href="">learn More</a>
+                            <a href=""><b>learn More</b></a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                                 has
                                 been the industry's standard dummy text.</p>
-                            <a href="">learn More</a>
+                            <a href=""><b>learn More</b></a>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                                 has
                                 been the industry's standard dummy text.</p>
-                            <a href="">learn More</a>
+                            <a href=""><b>learn More</b></a>
                         </div>
                     </div>
                 </div>
@@ -217,9 +217,10 @@
                 <h3>An Open Commitment by MD FERDOUS ALAM</h3>
             </div>
             <div class="end-icon-parant">
-                <img src="icon/facebook.png" alt="">
-                <img src="icon/github.png" alt="">
-                <img src="icon/linkedin-icon 1.png" alt="">
+                <a href="https://www.facebook.com/" target="_blank"><img src="icon/facebook.png" alt="facebook"></a>
+                <a href="https://github.com/" target="_blank"><img src="icon/github.png" alt="Github"></a>
+                <a href="https://bd.linkedin.com/" target="_blank"><img src="icon/linkedin-icon 1.png"
+                        alt="Linkedin"></a>
 
             </div>
         </div>
