--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="top-text">
-        <h3>FERDOUS.A</h3>
+        <h3>MD FERDOUS.A</h3>
         <button>Download Resume</button>
     </div>
     <!-- Banner Part -->
@@ -21,10 +21,8 @@
             </div>
             <div>
                 <h1 class="text-1">"In the near future, I hope to become a Developer."</h1>
-                <p class="para-1 text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum
-                    has been the
-                    industry's standard dummy text.</p>
+                <p class="para-1 text-dark">Combines both front-end and back-end development skills, allowing developers
+                    to handle both the client-side and server-side of web applications.</p>
             </div>
             <div>
                 <button class="btn">
@@ -40,17 +38,16 @@
             <div>
                 <div class="web-text-1">
                     <h2 class="text-dark">Why Web Development??</h2>
-                    <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem
-                        Ipsum has been
-                        the industry's standard dummy text.</p>
+                    <p class="text-dark">Web development is a vibrant and rewarding field with several compelling
+                        reasons to pursue it.Web development is crucial and appealing for several reasons:</p>
 
                 </div>
                 <div class="web-text-2 text-dark">
                     <div class="web-content-box">
                         <div>
-                            <h2>I will Do Coding and Change The World</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h2>Open Source Contribution</h2>
+                            <p>It will also give you the opportunity to contribute to open-source projects and
+                                participate in open-source programs such as GSoC, Outreachy, etc.</p>
                             <button>Learn More</button>
                         </div>
 
@@ -61,24 +58,28 @@
                 <div class="web-text-2 text-dark">
                     <div class="web-content-box">
                         <div>
-                            <h2>I will Do Coding and Change The World</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h2>Enhance Your Designing Skills</h2>
+                            <p>Web development is not just about coding, it is also about website designing. Before
+                                going into the process of development, you have to think about its layout, colors,
+                                fonts, visual assets, and more</p>
                             <button>Learn More</button>
                         </div>
 
-                        <img src="icon/Layer_1.png" alt="">
+                        <img src="icon/Group 3.png" alt="">
                     </div>
                 </div>
 
                 <div class="web-text-2 text-dark">
                     <div class="web-content-box">
+                        <img src="icon/Layer_1.png" alt="">
                         <div>
-                            <h2>I will Do Coding and Change The World</h2>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <h2>Develop Problem-Solving Skills</h2>
+                            <p> will give you the power to contribute to the world. You can develop or improve your
+                                problem-solving skills with it.</p>
                             <button>Learn More</button>
                         </div>
 
-                        <img src="icon/Layer_1.png" alt="">
+
                     </div>
                 </div>
 
@@ -90,9 +91,8 @@
         <section class="container-2">
             <div class="my-child-1">
                 <h2>My Inspiration</h2>
-                <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum has been the
-                    industry's standard dummy text.</p>
+                <p class="text-dark">Watching successful programmer interviews on YouTube can be incredibly inspiring
+                    and educational.</p>
             </div>
             <div class="my-child-2">
 
@@ -108,32 +108,30 @@
 
                 <div class="target-text-description">
                     <h2>My Current Target</h2>
-                    <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem
-                        Ipsum has been the
-                        industry's standard dummy text.</p>
+                    <p class="text-dark">My current target is to learn more about HTML, CSS, and JavaScript. Here's a
+                        structured way you can approach learning and improving your skills in these areas.</p>
                 </div>
                 <!-- HTML CSS JS PART  -->
                 <div class="target-item-description">
                     <div class="item-1 item-body">
                         <img src="icon/html.png" alt="">
                         <h3>HTML</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href=""><B>learn more</B></a>
+                        <p>HTML is the standard markup language for creating Web pages.</p>
+                        <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank"><B>learn more</B></a>
                     </div>
                     <!-- CSS -->
                     <div class=" cs-bg item-1 item-body">
                         <img src="icon/css.png" alt="">
                         <h3>CSS</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href=""><B>learn more</B></a>
+                        <p>CSS is the language we use to style a Web page.</p>
+                        <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank"><B>learn more</B></a>
                     </div>
                     <!-- JS -->
                     <div class=" js-bg item-1 item-body">
                         <img src="icon/js.png" alt="">
                         <h3>JAVASCRIPT</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href=""><B>learn more</B></a>
+                        <p>JavaScript is the world's most popular programming language.</p>
+                        <a href="https://www.w3schools.com/js/default.asp" target="_blank"><B>learn more</B></a>
                     </div>
                 </div>
 
@@ -142,10 +140,8 @@
             <div class="next-target">
                 <div class="next-text-description">
                     <h2>My Next Target</h2>
-                    <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem
-                        Ipsum has been the
-                        industry's standard dummy text.</p>
+                    <p class="text-dark">These are powerful tools and technologies often used together in modern web
+                        development. .</p>
                 </div>
                 <!-- REACT JS PART -->
                 <div class="next-item-container">
@@ -155,10 +151,9 @@
                         </div>
                         <div class="next-item-mg">
                             <h3>React JS</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has
-                                been the industry's standard dummy text.</p>
-                            <a href=""><b>learn More</b></a>
+                            <p>Our "Show React" tool makes it easy to demonstrate React. It shows both the code and the
+                                result.</p>
+                            <a href="https://www.w3schools.com/react/default.asp" target="_blank"><b>learn More</b></a>
                         </div>
                     </div>
                 </div>
@@ -170,10 +165,12 @@
                         </div>
                         <div class="next-item-mg">
                             <h3>Node Js</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has
-                                been the industry's standard dummy text.</p>
-                            <a href=""><b>learn More</b></a>
+                            <p>Node.js is an open source server environment.
+
+                                Node.js allows you to run JavaScript on the server.
+
+                            </p>
+                            <a href="https://www.w3schools.com/nodejs/default.asp" target="_blank"><b>learn More</b></a>
                         </div>
                     </div>
                 </div>
@@ -185,10 +182,8 @@
                         </div>
                         <div class="next-item-mg">
                             <h3>Mongo DB</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has
-                                been the industry's standard dummy text.</p>
-                            <a href=""><b>learn More</b></a>
+                            <p>MongoDB is a document database. It stores data in a type of JSON format called BSON.</p>
+                            <a href="https://www.w3schools.com/mongodb/index.php" target="_blank"><b>learn More</b></a>
                         </div>
                     </div>
                 </div>
